// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Rating should render five stars 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  font-size: 2.2rem;
  color: #F3F3F3;
}

@media only screen and (min-width:640px) {
  .c1 {
    font-size: 2.7rem;
  }
}

<div
  class="c0"
>
  <i
    class="c1 material-icons"
  >
    star
  </i>
  <i
    class="c1 material-icons"
  >
    star
  </i>
  <i
    class="c1 material-icons"
  >
    star
  </i>
  <i
    class="c1 material-icons"
  >
    star
  </i>
  <i
    class="c1 material-icons"
  >
    star
  </i>
</div>
`;

exports[`Component: Rating should render four stars 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  font-size: 2.2rem;
  color: #F3F3F3;
}

@media only screen and (min-width:640px) {
  .c1 {
    font-size: 2.7rem;
  }
}

<div
  class="c0"
>
  <i
    class="c1 material-icons"
  >
    star
  </i>
  <i
    class="c1 material-icons"
  >
    star
  </i>
  <i
    class="c1 material-icons"
  >
    star
  </i>
  <i
    class="c1 material-icons"
  >
    star
  </i>
  <i
    class="c1 material-icons"
  >
    star_outline
  </i>
</div>
`;

exports[`Component: Rating should render one star 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  font-size: 2.2rem;
  color: #F3F3F3;
}

@media only screen and (min-width:640px) {
  .c1 {
    font-size: 2.7rem;
  }
}

<div
  class="c0"
>
  <i
    class="c1 material-icons"
  >
    star
  </i>
  <i
    class="c1 material-icons"
  >
    star_outline
  </i>
  <i
    class="c1 material-icons"
  >
    star_outline
  </i>
  <i
    class="c1 material-icons"
  >
    star_outline
  </i>
  <i
    class="c1 material-icons"
  >
    star_outline
  </i>
</div>
`;

exports[`Component: Rating should render three stars 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  font-size: 2.2rem;
  color: #F3F3F3;
}

@media only screen and (min-width:640px) {
  .c1 {
    font-size: 2.7rem;
  }
}

<div
  class="c0"
>
  <i
    class="c1 material-icons"
  >
    star
  </i>
  <i
    class="c1 material-icons"
  >
    star
  </i>
  <i
    class="c1 material-icons"
  >
    star
  </i>
  <i
    class="c1 material-icons"
  >
    star_outline
  </i>
  <i
    class="c1 material-icons"
  >
    star_outline
  </i>
</div>
`;

exports[`Component: Rating should render two stars 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  font-size: 2.2rem;
  color: #F3F3F3;
}

@media only screen and (min-width:640px) {
  .c1 {
    font-size: 2.7rem;
  }
}

<div
  class="c0"
>
  <i
    class="c1 material-icons"
  >
    star
  </i>
  <i
    class="c1 material-icons"
  >
    star
  </i>
  <i
    class="c1 material-icons"
  >
    star_outline
  </i>
  <i
    class="c1 material-icons"
  >
    star_outline
  </i>
  <i
    class="c1 material-icons"
  >
    star_outline
  </i>
</div>
`;
